# wdaemon

./: 0001-Add-Intuos5-support.patch  0001-Fix-resouce-leak-in-evemu_load_device.patch  0002-Fix-resource-leaks-in-add_device.patch  0003-Fix-size-of-memset.patch  0004-Initialize-retval.patch  0005-Initialize-out-to-avoid-calling-fclose-on-unitialize.patch  0006-Reset-devices-to-NULL-after-free.patch  Makefile  README.md  wdaemon.spec
src/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  config.c  configure  configure.ac  debug.c  debug.h  device_types.c  device_types.h  evemu.c  hotplug.c  hotplug.h  input.c  input.h  monitored.c  monitored.h  session.c  session.h  simple.c  stddev.c  stddev.h  uinput.c  uinput.h  wacom.c  wacom.h  wdaemon-config.h  wdaemon-evemu.h  wdaemon.1  wdaemon.txt  wdaemon.txt.in
src/conf/: 70-wdaemon-example.conf  70-wdaemon-example.fdi  Makefile.am  Makefile.in
src/scripts/: Makefile.am  Makefile.in  wdaemon.in
src/udev/: 60-wacom.rules  61-uinput-stddev.rules  61-uinput-stddev.rules.in  61-uinput-wacom.rules  61-uinput-wacom.rules.in  Makefile.am  Makefile.in  wdaemon_is_uinput.sh
